test/official_tests/inheritance/inherit_from_nil.lox
var Nil = nil;
class Foo < Nil {} // error: {"line":2,"message":"Superclass must be a class","type":"RuntimeError"}
